fix visibility hidden

--- a/sass/helpers/visibility.sass
+++ b/sass/helpers/visibility.sass
@@ -1,6 +1,6 @@
 @import "../utilities/mixins"
 
-$displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex' 'hidden'
+$displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
 
 @each $display in $displays
   .is-#{$display}
@@ -51,6 +51,50 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex' 'hidden'
   position: absolute !important
   white-space: nowrap !important
   width: 0.01em !important
+
++mobile
+  .is-hidden-mobile
+    display: none !important
+
++tablet
+  .is-hidden-tablet
+    display: none !important
+
++tablet-only
+  .is-hidden-tablet-only
+    display: none !important
+
++touch
+  .is-hidden-touch
+    display: none !important
+
++desktop
+  .is-hidden-desktop
+    display: none !important
+
++desktop-only
+  .is-hidden-desktop-only
+    display: none !important
+
++widescreen
+  .is-hidden-widescreen
+    display: none !important
+
++widescreen-only
+  .is-hidden-widescreen-only
+    display: none !important
+
++fullhd
+  .is-hidden-fullhd
+    display: none !important
+
++until-widescreen
+  .is-hidden-until-widescreen
+    display: none !important
+
++until-fullhd
+  .is-hidden-until-fullhd
+    display: none !important
 
 .is-invisible
   visibility: hidden !important
